# pad_web_proxy

./: PAD.postman_collection.json  README.md  command.txt  generate_protos.sh
diagrams/: diagrams_code.txt
gateway/: Dockerfile  aws-credentials.yaml  gateway-deployment.yaml  gateway-destinationrule.yaml  main.py  pyproject.toml  redis-1-deployment.yaml  redis-2-deployment.yaml  redis-3-deployment.yaml  redis-cluster.yaml  redis-deployment-master.yaml  redis-deployment-replica.yaml  redis-deployment.yaml  redis-sentinel-deployment.yaml  requirements.in  requirements.txt
gateway/config/: config.py
gateway/models/: playback_models.py  track_models.py  user_models.py  user_service.py
gateway/proto/: common_pb2.py  playback_pb2.py  playback_pb2_grpc.py  track_pb2.py  track_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
gateway/routes/: playback_routes.py  status_routes.py  track_routes.py  user_routes.py
gateway/services/: cache.py  circuit_breaker.py  playback_service.py  track_service.py  user_service.py
gateway/utils/: circuit_breaker_manager.py  grpc_utils.py  priviliges_utils.py  s3_utils.py  saga.py
playback_service/: Dockerfile  concurrent_task_command.txt  ghz_commands.txt  go.mod  go.sum  main.go  p-postgres-deployment.yaml  payload.json  playback-service-deployment.yaml  playback-service-destinationrule.yaml  playback-service-svc.yaml
proto/: common.proto  playback.proto  track.proto  user.proto
track_service/: Dockerfile  failover-values.yaml  ghz_commands.txt  go.mod  go.sum  main.go  payload.json  pvc.yaml  t-postgres-deployment.yaml  values.yaml  (+3 more)
(+49 files in other folders)
